@@ -19,7 +19,7 @@
 namespace khmer
 {
 
-
+#ifdef WITH_INTERNAL_METRICS
 struct InvalidPerformanceMetricsKey : public std:: exception
 { };
 
@@ -27,7 +27,7 @@ struct InvalidPerformanceMetricsKey : public std:: exception
 struct IPerformanceMetrics
 {
 
-	    IPerformanceMetrics( );
+	     IPerformanceMetrics( );
     virtual ~IPerformanceMetrics( );
     
     inline void	    start_timers( )
@@ -35,7 +35,7 @@ struct IPerformanceMetrics
 #if defined (__linux__)
 	clock_gettime( CLOCK_REALTIME, &_temp_clock_start );
 	clock_gettime( CLOCK_THREAD_CPUTIME_ID, &_temp_cpu_start );
-// TODO: Create proper stopwatches for MacOS X and Windows.
+// TODO: Create proper stopwatches for MacOS X.
 #else
 	memset( &_temp_clock_start, 0, sizeof( timespec ) );
 	memset( &_temp_cpu_start, 0, sizeof( timespec ) );
@@ -46,7 +46,7 @@ struct IPerformanceMetrics
 #if defined (__linux__)
 	clock_gettime( CLOCK_THREAD_CPUTIME_ID, &_temp_cpu_stop );
 	clock_gettime( CLOCK_REALTIME, &_temp_clock_stop );
-// TODO: Create proper stopwatches for MacOS X and Windows.
+// TODO: Create proper stopwatches for MacOS X.
 #else
 	memset( &_temp_cpu_stop, 0, sizeof( timespec ) );
 	memset( &_temp_clock_stop, 0, sizeof( timespec ) );
@@ -69,8 +69,9 @@ protected:
 
 };
 
-} // namespace khmer
+#endif // WITH_INTERNAL_METRICS
 
+} // namespace khmer
 #endif // PERF_METRICS_HH
 
 // vim: set ft=cpp sts=4 sw=4 tw=79:
